Site structure refactor - removal of SFMC Use Cases to simply navigation

--- a/docs/config/sfmc-appexchange-solutions.mdx
+++ b/docs/config/sfmc-appexchange-solutions.mdx
@@ -1,5 +1,5 @@
 ---
-id: sfmc-config-appexchange-solutions
+id: sfmc-appexchange-solutions
 title: SFMC AppExchange Solutions
 sidebar_label: AppExchange Solutions
 description: Fill the feature gaps with plug-and-play apps. Salesforce Marketing Cloud AppExchange ready-to-use solution highlights.
@@ -51,7 +51,7 @@ Once you have requirements, it's time to check what already is within your Marke
 
 :::note You Should Know
 
-Not all solutions are available by default - some require a support ticket to be enabled. Check out my [list of features on-demand](../config/sfmc-config-features-on-demand.mdx) to see if there is anything hidden that might fulfil your requirements.
+Not all solutions are available by default - some require a support ticket to be enabled. Check out my [list of features on-demand](./sfmc-features-on-demand.mdx) to see if there is anything hidden that might fulfil your requirements.
 
 :::
 
@@ -85,7 +85,7 @@ There are four things to consider:
 3. __Will it be cheaper than AppExchange?__ Sure, with enough time and money, you can build something good enough. But will it be more affordable than a similar solution available in the paid section of AppExchange?
 4. __Will you maintain it?__ Even if you answered yes to the previous three points, you must consider maintenance. In most cases, building a custom is just the beginning. Requirements change, new needs happen, platforms get updated and require refactor. With AppExchange solutions, it _should_ be much less of a worry in the long term.
 
-While the list might look like a hard pass for custom solutions, there is a place for them. Especially on the ends of the spectrum. Simple, but lifesaving micro solutions ([Cloud Page Apps](../usecase/sfmc-cloud-page-apps.mdx), [Code Resources](../usecase/sfmc-code-resource.mdx)) or custom behemoths aligned to all non-negotiable quirks and features of your internal processes.
+While the list might look like a hard pass for custom solutions, there is a place for them. Especially on the ends of the spectrum. Simple, but lifesaving micro solutions ([Cloud Page Apps](../ssjs/snippets/sfmc-cloud-page-apps.mdx), [Code Resources](./sfmc-code-resource.mdx)) or custom behemoths aligned to all non-negotiable quirks and features of your internal processes.
 
 However, if you hit a hard "no" to any of the above questions, it's time to visit the AppExchange again.
 
