--- a/docs/config/sfmc-code-resource.mdx
+++ b/docs/config/sfmc-code-resource.mdx
@@ -285,7 +285,7 @@ If the request comes from Marketing Cloud controlled resource (Cloud Page, Email
 
 ### SSO
 
-Finally, if the Code Resource is part of your internal solution created only for Marketing Cloud users, you may leverage full-blown SSO to make it as secure as the whole platform. Read more on that approach in the [Cloud Page Apps article](./sfmc-cloud-page-apps.mdx#a-good-application-is-a-secure-application).
+Finally, if the Code Resource is part of your internal solution created only for Marketing Cloud users, you may leverage full-blown SSO to make it as secure as the whole platform. Read more on that approach in the [Cloud Page Apps article](../ssjs/snippets/sfmc-cloud-page-apps.mdx#a-good-application-is-a-secure-application).
 
 ## Examples
 
@@ -295,6 +295,6 @@ With the flexibility of Code Resources, the sky is the limit for compelling use 
 2. Run [SSJS within a Journey Activity](https://www.linkedin.com/pulse/ssjs-journey-builder-sascha-huwald/) by [Sascha Huwald](https://www.linkedin.com/in/sascha-huwald/).
 3. Create a [custom Chrome search engine that can find and directly open SFMC Data Extensions right from your URL bar](https://sfmr.dev/ideas/sfmc/tools/data-extension-search-engine) by [Michał Rzepka](https://www.linkedin.com/in/michalrzepka90/).
 4. Create [Data Extension Search Engine in your Slack](https://youtu.be/8gESkxxXJ7A) by [Cam Robert](https://www.linkedin.com/in/camrobert/).
-5. Build [Cloud Page Apps](./sfmc-cloud-page-apps.mdx) to make your and your team lives easier.
+5. Build [Cloud Page Apps](../ssjs/snippets/sfmc-cloud-page-apps.mdx) to make your and your team lives easier.
 
 Know other inspiring Code Resource use cases? Let me know!
