--- a/docs/config/sfmc-features-on-demand.mdx
+++ b/docs/config/sfmc-features-on-demand.mdx
@@ -1,5 +1,5 @@
 ---
-id: sfmc-config-features-on-demand
+id: sfmc-features-on-demand
 title: SFMC Features On Demand
 sidebar_label: Features On Demand
 description: Discover the Salesforce Marketing Cloud Features On Demand and unlock platform potential.
