--- a/docs/ssjs/snippets/ampscript-in-ssjs.mdx
+++ b/docs/ssjs/snippets/ampscript-in-ssjs.mdx
@@ -1,5 +1,5 @@
 ---
-id: ssjs-snippet-ampscript-in-ssjs
+id: ampscript-in-ssjs
 title: AMPScript in SSJS
 sidebar_label: AMPScript in SSJS
 description: Not all AMPScript functions are available in SSJS. But you still can use them.
