--- a/docs/js/snippets/engage-with-countdown.mdx
+++ b/docs/js/snippets/engage-with-countdown.mdx
@@ -1,5 +1,5 @@
 ---
-id: js-snippet-engage-with-countdown
+id: engage-with-countdown
 title: Engage with Countdown
 description: Start boosting conversion rates right now! There are many ways to engage customers, and urgency is the king among them. Learn how to leverage it today.
 image: img/og/og-image-engage-with-countdown.png
