--- a/docs/ssjs/snippets/ssjs-script-template.mdx
+++ b/docs/ssjs/snippets/ssjs-script-template.mdx
@@ -1,5 +1,5 @@
 ---
-id: ssjs-snippet-ssjs-script-template
+id: ssjs-script-template
 title: SSJS Script Template
 sidebar_label: SSJS Script Template
 description: Jumpstart your coding with best practice fueled SSJS Template.
@@ -241,7 +241,7 @@ To learn more about them, check out detailed descriptions of [`debugValue`](../d
 
 :::note You Should Know
 
-If the script will be used in [JSON Code Resource backend](../../usecase/sfmc-code-resource.mdx) I modify those two functions a bit by:
+If the script will be used in [JSON Code Resource backend](../../config/sfmc-code-resource.mdx) I modify those two functions a bit by:
 
 1. Changing the `debugValue` Write to: `Write(' --- ' + description + ': ' + (typeof value == 'object' ? Stringify(value) : value) + ' --- ');` as break line tag will not work.
 
@@ -249,7 +249,7 @@ If the script will be used in [JSON Code Resource backend](../../usecase/sfmc-co
 
 :::
 
-In many cross-cloud scenarios I also use [AMPScript runner](./ssjs-snippet-ampscript-in-ssjs.mdx), but as it is more use case specific solution, I don't keep it in base template.
+In many cross-cloud scenarios I also use [AMPScript runner](./ampscript-in-ssjs.mdx), but as it is more use case specific solution, I don't keep it in base template.
 
 I prefix all functions with [documentation comments](../ssjs-style-guide.mdx#3-documentation-comments).
 
